# iyxsh

./: LICENSE
LibreofficeFun/server/: CMakeLists.txt  core_dump_config.md  debugging_and_core_config.md  generate.sh  key.txt  package.sh  readme.md  readme.txt
LibreofficeFun/server/data/: default.ods  default.xlsx
LibreofficeFun/server/data/default/: default.ods
LibreofficeFun/server/data/work/: 减肥都是这.ods  哈发的顺丰的.ods  搞大幅度.ods  花费多少啊.ods
LibreofficeFun/server/deploy/: README.md  deploy.sh  libreofficefun.service
LibreofficeFun/server/leofun/: leofun.cpp
LibreofficeFun/server/leofun/apihandle/: handle.cpp  handle.h
LibreofficeFun/server/leofun/cJSON/: cJSON.c  cJSON.h
LibreofficeFun/server/leofun/config/: json_config.cpp  json_config.h
LibreofficeFun/server/leofun/error/: error_codes.cpp  error_codes.h
LibreofficeFun/server/leofun/filemanager/: DocumentManager.cpp  DocumentManager.h  ErrorHandler.cpp  ErrorHandler.h  LibreOfficeService.cpp  LibreOfficeService.h  apiops.cpp  apiops.h  cache.cpp  cache.h  filehandlers.cpp  filehandlers.h  filemanager.cpp  filemanager.h  fileops.cpp  fileops.h  filequeue.cpp  filequeue.h  filequeue.h.bak  lofficeconn.cpp  lofficeconn.h  spreadsheet.cpp  spreadsheet.h  template_index_cache.cpp  template_index_cache.h  unicodetable.cpp  unicodetable.h  utils.cpp  utils.h
LibreofficeFun/server/leofun/logger/: logger.cpp  logger.h
LibreofficeFun/server/sdk/FreeBSD/sdk/: setsdkenv_unix.sh
LibreofficeFun/server/sdk/FreeBSD/sdk/cppheaders/ooo/vba/: TypeAndIID.hpp  XApplicationBase.hpp  XAssistant.hpp  XCollection.hpp  XCommandBarButton.hpp  XCommandBarControl.hpp  XCommandBarControls.hpp  XCommandBars.hpp  XConnectable.hpp  XConnectionPoint.hpp  XDialogsBase.hpp  XDocumentProperties.hpp  XHelperInterface.hpp  XInterfaceWithIID.hpp  XSinkCaller.hpp  XWindowBase.hpp
LibreofficeFun/server/sdk/FreeBSD/sdk/examples/DevelopersGuide/: examples.html
LibreofficeFun/server/sdk/FreeBSD/sdk/settings/: dk.mk
LibreofficeFun/server/sdk/cppheaders/com/sun/star/accessibility/: AccessibleRelationType.hpp  AccessibleScrollType.hpp  AccessibleTableModelChange.hpp  GetStandardAccessibleFactoryService.hpp  IllegalAccessibleComponentStateException.hpp  XAccessible.hpp  XAccessibleComponent.hpp  XAccessibleContext2.hpp  XAccessibleContext3.hpp  XAccessibleEventListener.hpp  XAccessibleHyperlink.hpp  XAccessibleMultiLineText.hpp  XAccessibleSelection.hpp  XAccessibleTableSelection.hpp  XAccessibleTextSelection.hdl
LibreofficeFun/server/sdk/cppheaders/com/sun/star/animations/: TargetProperties.hpp  Timing.hpp  ValuePair.hpp  XAnimate.hpp  XAnimateColor.hpp  XAnimatePhysics.hpp  XAnimateSet.hpp  XAnimationNodeSupplier.hpp  XCommand.hpp
LibreofficeFun/server/sdk/cppheaders/com/sun/star/auth/: AuthenticationFailedException.hdl  AuthenticationFailedException.hpp  InvalidArgumentException.hdl  InvalidArgumentException.hpp  InvalidContextException.hpp  InvalidCredentialException.hpp  InvalidPrincipalException.hdl  InvalidPrincipalException.hpp  PersistenceFailureException.hdl  PersistenceFailureException.hpp  UnsupportedException.hdl  UnsupportedException.hpp  XSSOInitiatorContext.hpp
LibreofficeFun/server/sdk/cppheaders/com/sun/star/awt/: AdjustmentEvent.hpp  ColorStop.hpp  DeviceInfo.hpp  DockingData.hpp  DockingEvent.hpp  EndPopupModeEvent.hpp  FontSlant.hpp  GradientStyle.hpp  InputEvent.hpp  ItemEvent.hpp  ItemListEvent.hpp  KeyEvent.hpp  KeyStroke.hpp  MenuItemType.hpp  MessageBoxType.hpp  PaintEvent.hpp  PrinterException.hdl  PushButtonType.hpp  Selection.hpp  SpinEvent.hpp  SystemDependentXWindow.hpp  TextEvent.hpp  WindowClass.hpp  WindowEvent.hpp  XActivateListener.hpp  XAdjustmentListener.hpp  XAnimatedImages.hpp  XBitmap.hpp  XCheckBox.hpp  XContainerWindowEventHandler.hpp  XContainerWindowProvider.hpp  XControlContainer.hpp  XControlModel.hpp  XCurrencyField.hpp  XDateField.hpp  XDevice.hpp  (+55 more)
LibreofficeFun/server/sdk/cppheaders/ooo/vba/: XCollectionBase.hpp  XCommandBar.hpp  XCommandBarPopup.hpp  XControlProvider.hpp  XDialogBase.hpp  XDocumentBase.hpp  XDocumentProperty.hpp  XDocumentsBase.hpp  XErrObject.hpp  XExecutableDialog.hpp  XFontBase.hpp  XGlobalsBase.hpp  XPageSetupBase.hpp  XPropValue.hpp  XSink.hpp  XVBAToOOEventDescGen.hpp
LibreofficeFun/server/sdk/cppheaders/ooo/vba/excel/: XApplication.hpp  XAxes.hpp  XAxis.hpp  XAxisTitle.hpp  XBorders.hpp  XButton.hpp  XCharacters.hpp  XChart.hpp  XCharts.hpp  XDataLabels.hpp  XDialogs.hpp  XDrawings.hpp  XFileDialog.hpp  XFont.hpp  XGlobals.hpp  XHPageBreaks.hpp  XHyperlink.hpp  XHyperlinks.hpp  XLineObjects.hpp  XMenu.hpp  XMenuBar.hpp  XMenus.hpp  XName.hpp  XOutline.hpp  XPageSetup.hpp  XPivotTables.hpp  XRange.hpp  XSeriesCollection.hpp  XSheetObject.hpp  XVPageBreak.hpp  XVPageBreaks.hpp  XValidation.hpp  XWorksheetFunction.hpp
LibreofficeFun/server/sdk/cppheaders/ooo/vba/msforms/: XColorFormat.hpp  XComboBox.hpp  XCommandButton.hpp  XGroupBox.hpp  XImage.hpp  XLabel.hpp  XLine.hpp  XLineFormat.hpp  XMultiPage.hpp  XRadioButton.hpp  XReturnBoolean.hpp  XReturnInteger.hpp  XScrollBar.hpp  XShape.hpp  XShapeRange.hpp  XTextFrame.hpp
LibreofficeFun/server/sdk/cppheaders/ooo/vba/word/: XAddin.hpp  XApplication.hpp  XApplicationOutgoing.hpp  XAutoTextEntries.hpp  XBookmarks.hpp  XBorders.hpp  XCell.hpp  XColumn.hpp  XColumns.hpp  XContentControlListEntries.hpp  XContentControls.hpp  XDialog.hpp  XDialogs.hpp  XDocument.hpp  XDropDown.hpp  XField.hpp  XFields.hpp  XFind.hpp  XFormField.hpp  XFrames.hpp  XGlobals.hpp  XHeadersFooters.hpp  XListFormat.hpp  XListGalleries.hpp  XListLevel.hpp  XListLevels.hpp  XListTemplates.hpp  XParagraphFormat.hpp  XReplacement.hpp  XRow.hpp  XSections.hpp  XStyle.hpp  XSystem.hpp  XTableOfContents.hpp  XVariable.hpp  XWindow.hpp
LibreofficeFun/server/sdk/cppheaders/org/freedesktop/PackageKit/: XQuery.hpp  XSyncDbusSessionHelper.hpp
LibreofficeFun/server/sdk/examples/: examples.html
LibreofficeFun/server/sdk/lib/: libuno_cppu.so.3  libuno_cppuhelpergcc3.so.3  libuno_purpenvhelpergcc3.so.3  libuno_sal.so.3  libuno_salhelpergcc3.so.3
(+2895 files in other folders)
